--- a/HaierOven/AlertDatePicker.xib
+++ b/HaierOven/AlertDatePicker.xib
@@ -59,7 +59,7 @@
                     <rect key="frame" x="150" y="202" width="150" height="40"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <state key="normal" title="确认">
+                    <state key="normal" title="完成">
                         <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -75,7 +75,7 @@
                     <locale key="locale" localeIdentifier="zh"/>
                 </datePicker>
             </subviews>
-            <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+            <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="A0X-67-lmn" secondAttribute="bottom" id="1xK-eE-Usl"/>
                 <constraint firstItem="S7p-hk-pot" firstAttribute="top" secondItem="tHu-ux-Kyk" secondAttribute="top" constant="39" id="ACg-Cd-FeT"/>
