--- a/HaierOven/Base.lproj/Main.storyboard
+++ b/HaierOven/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qb9-bz-vmv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qb9-bz-vmv">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -2287,7 +2287,7 @@
                             </button>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="6bo-pi-eFP">
-                            <rect key="frame" x="96" y="5.5" width="128" height="33"/>
+                            <rect key="frame" x="96" y="6" width="128" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的设备" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XPb-KW-CtE">
@@ -2684,7 +2684,7 @@
                                 <color key="shadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="您的手机号码" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KwT-kV-jGj">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="您的手机号码" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KwT-kV-jGj">
                                 <rect key="frame" x="16" y="262" width="288" height="38"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -2693,7 +2693,7 @@
                                 <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="15"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" tag="2" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tBo-qK-G6c">
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tBo-qK-G6c">
                                 <rect key="frame" x="25" y="340" width="270" height="31"/>
                                 <color key="backgroundColor" red="1" green="0.6588235294" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -3540,6 +3540,14 @@
                                                         <action selector="alertView:" destination="ev3-io-dBY" eventType="touchUpInside" id="zY6-n8-iY1"/>
                                                     </connections>
                                                 </button>
+                                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0UL-0j-uZ5" customClass="KKProgressTimer">
+                                                    <rect key="frame" x="90" y="37" width="45" height="45"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="45" id="4oo-ia-l5Y"/>
+                                                        <constraint firstAttribute="width" constant="45" id="eDm-T2-ve4"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
@@ -3547,6 +3555,8 @@
                                                 <constraint firstAttribute="trailing" secondItem="89l-2V-5eI" secondAttribute="trailing" id="8Bv-Cq-RgP"/>
                                                 <constraint firstItem="XNB-3b-Ytf" firstAttribute="width" secondItem="AdG-ih-YLk" secondAttribute="height" multiplier="13:24" id="K42-ID-Sdr"/>
                                                 <constraint firstItem="XNB-3b-Ytf" firstAttribute="leading" secondItem="AdG-ih-YLk" secondAttribute="trailing" constant="47" id="PAs-qk-E6m"/>
+                                                <constraint firstItem="XNB-3b-Ytf" firstAttribute="centerY" secondItem="0UL-0j-uZ5" secondAttribute="centerY" id="T3I-Pk-uZ0"/>
+                                                <constraint firstItem="XNB-3b-Ytf" firstAttribute="centerX" secondItem="0UL-0j-uZ5" secondAttribute="centerX" constant="-0.5" id="Y9l-si-3tx"/>
                                                 <constraint firstAttribute="bottom" secondItem="QjD-T2-N5r" secondAttribute="bottom" id="arV-co-atj"/>
                                                 <constraint firstAttribute="centerY" secondItem="AdG-ih-YLk" secondAttribute="centerY" constant="-11.5" id="dBd-tp-mjd"/>
                                                 <constraint firstItem="89l-2V-5eI" firstAttribute="top" secondItem="tVu-Jn-UGj" secondAttribute="top" id="htL-Uw-Blu"/>
@@ -3658,6 +3668,8 @@
                         <outlet property="bakeModeLabel" destination="c7w-Iw-Lyv" id="fPa-O3-8uv"/>
                         <outlet property="bakeTemperatureLabel" destination="Zb8-F5-XYR" id="ZMp-v2-mwg"/>
                         <outlet property="bakeTimeLabel" destination="dvf-kR-Nb0" id="H9Y-bP-Rbk"/>
+                        <outlet property="clockIcon" destination="XNB-3b-Ytf" id="AcO-H0-tnl"/>
+                        <outlet property="cookTimeView" destination="0UL-0j-uZ5" id="phB-PG-wPV"/>
                         <outlet property="deviceNameButton" destination="Fhd-of-fJk" id="Wxz-Wp-GN4"/>
                         <outlet property="deviceScrollView" destination="YKG-gg-ma4" id="1HL-Wk-NvS"/>
                         <outlet property="howlong" destination="jqv-wN-Qn5" id="cqb-SK-V8W"/>
@@ -3823,7 +3835,7 @@
                             </button>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="fqN-4I-e3h">
-                            <rect key="frame" x="120" y="5.5" width="80" height="33"/>
+                            <rect key="frame" x="120" y="6" width="80" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="我的设备" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xzO-pJ-ySs">
